projekt04/src/public/css/styles.css
/* Font */
@font-face {
    font-family: 'Jost';
    src: url('/fonts/Jost-VariableFont_wght.ttf') format('truetype');
    font-weight: 100 900;
}

/* Variables */

:root {
    --color-background: #1B1D2E;
    --color-foreground: #EAECFC;
    --color-border: #adadad;
    --color-primary: #e8c547;
    --color-text: black;
    --color-secondary: #71737e;
    --color-danger: #e05252;
    --color-alter: #1e8733;

    --scale-tranform: 1.15
}

/* Reset & base */

html {
    font-family: 'Jost', sans-serif;
    background-color: var(--color-background);
    color: var(--color-text);
}

body {
    padding: 20px 40px 0 40px;
    font-size: 1.2rem;
}

* {
    margin: 0;
}

img {
    box-sizing: border-box;
}

/* Helpers */

.btn {
    font-size: 1.7rem;
    border: 2px solid var(--color-border);
    padding: 24px;
    border-radius: 6px;
    line-height: 0;
}

.btn:hover {
    filter: brightness(80%);
    transform: scale(var(--scale-tranform));
    cursor: pointer;
}

.btn img {
    width: 48px;
    height: 48px;
}

.btn--small {
    font-size: 1.2rem;
    padding: 6px !important;
}

.btn--small img {
    width: 38px;
    height: 38px;
}

.btn--primary {
    background-color: var(--color-primary);
}

.btn--danger {
    background-color: var(--color-danger);
}

.btn--alter {
    background-color: var(--color-alter);
}

.input {
    border-radius: 6px;
    border: 2px solid var(--color-border);
    padding: 8px;
}

.input--primary {
    font-size: 1.4em;
}

.input--alter {
    font-size: 1.4em;
    background-color: var(--color-foreground);
    border: none;
    border-bottom: 2px solid var(--color-border);
    border-radius: 0;
    outline: none;
}

.select {
    font-size: 1.5em;
    border-radius: 4px;
    padding: 8px;
    letter-spacing: 3px;
    text-align: center;
}

.select > option:nth-child(even) {
    background-color: var(--color-border);
}

.form {
    display: flex;
    align-items: center;
    justify-content: center;
    width: 100%;
    gap: 32px;
}

.form--horizontal {
    flex-direction: row;
}

.form--vertical {
    flex-direction: column;
}

.form label {
    font-size: 1.2em;
}

.hflex-container {
    display: flex;
    flex-direction: row;
    gap: 10px;
}

.hflex-container--align {
    justify-content: center;
    align-items: center;
    
}

.hflex-container--stretch {
    justify-content: center;
    align-items: stretch;
}

.alert {
    font-size: 1.2em;
}

.alert--error {
    color: var(--color-danger);
}

/* Navigation */
.nav {
    display: flex;
    justify-content: space-between;
    align-items: center;
    width: 100%;
}

.nav__logo {
    display: block;
    width: 72px;
    height: 72px;
}

.nav__links {
    display: flex;
    flex-direction: row;
    color: var(--color-primary);
    gap: 20px;
}

.nav__item {
    display: flex;
    flex-direction: column;
    align-items: center;
    text-decoration: none;
    gap: 6px;
}

.nav__item:hover {
   transform: scale(var(--scale-tranform));
}

.nav__item:visited {
    color: inherit;
}

.nav__icon {
    width: 40px;
    height: 40px;
}

/* Main content - card */

.card {
    display: flex;
    flex-direction: column;
    align-items: center;
    overflow-y: auto;
    background-color: var(--color-foreground);
    max-height: 70vh;
    gap: 20px;
    border-radius: 16px;
    padding: 50px;
    margin-top: 50px;
}

.card__title {
    font-weight: 800;
}

.card__title--error {
    color: var(--color-danger);
}

.card__tip {
    color: var(--color-secondary);
    font-size: 1.7em;
    font-weight: 500;
}

.game-overview {
    display: flex;
    justify-content: space-between;
    font-size: 1.6em;
    width: 100%;
}

.game-overview__info {
    display: flex;
    flex-direction: column;
    font-weight: 400;
    color: var(--color-secondary);
}

.game-overview__word {
    text-align: center;
    font-weight: 800;
    font-size: 1.5em;
}

.game-overview__score {
    display: flex;
    align-items: center;
    justify-content: end;
}

.game-overview__info,
.game-overview__word,
.game-overview__score {
    flex: 1;
}

.game-controls {
    display: flex;
    margin-top: 20px;
    gap: 32px;
}

.word-list {
    align-self: flex-start;
    display: flex;
    align-items: center;
    flex-direction: column;
    list-style: none;
    gap: 12px;
}

.word-list__category > ul {
    display: flex;
    flex-direction: column;
    gap: 12px;

}

.word-list__category-name {
    padding-bottom: 4px;
    border-bottom: 1px solid var(--color-border);
    margin-bottom: 4px;
}

.word-list__item {
    display: flex;
    align-items: center;
    padding: 4px;
    padding-bottom: 12px;
    border-bottom: 1px solid var(--color-border);
    gap: 20px;
    
}

.word-list__word-name {
    min-width: 200px;
    font-size: 1.1em;
    font-weight: 500;
}

.summary-score {
    font-size: 3em;
    font-weight: 800;
    color: var(--color-danger);
}

